tests/baselines/reference/additionOperatorWithTypeParameter.errors.txt
==== tests/cases/compiler/additionOperatorWithTypeParameter.ts (16 errors) ====
    // type parameter type is not a valid operand of addition operator
    enum E { a, b }
    
    function foo<T, U>(t: T, u: U) {
        var a: any;
        var b: boolean;
        var c: number;
        var d: string;
        var e: Object;
        var g: E;
        var f: void;
    
        // type parameter as left operand
        var r1: any = t + a; // ok, one operand is any
        var r2 = t + b;
                 ~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
        var r3 = t + c;
                 ~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
        var r4 = t + d; // ok, one operand is string
        var r5 = t + e;
                 ~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
        var r6 = t + g;
                 ~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
        var r7 = t + f;
                 ~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    
        // type parameter as right operand
        var r8 = a + t; // ok, one operand is any
        var r9 = b + t;
                 ~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
        var r10 = c + t;
                  ~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
        var r11 = d + t; // ok, one operand is string
        var r12 = e + t;
                  ~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
        var r13 = g + t;
                  ~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
        var r14 = f + t;
                  ~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    
        // other cases
        var r15 = t + null;
                  ~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
        var r16 = t + undefined;
                  ~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
        var r17 = t + t;
                  ~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
        var r18 = t + u;
                  ~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
        var r19 = t + (() => { });
                  ~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
        var r20 = t + [];
                  ~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    }